--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,25 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.movie {
+  position: relative;
+  margin: 1em;
+  display: inline-block;
+  width: 200px;
+}
+.movie-poster {
+  object-fit: contain;
+  width: 100%;
+  height: auto;
+}
+.movie-title {
+  max-width: 100%;
+  display: flex;
+  flex-direction: column-reverse;
+  margin: 0;
+}
+.movie-title a {
+  color: inherit;
+  text-decoration: none;
+}
