--- a/src/index.css
+++ b/src/index.css
@@ -5,11 +5,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  max-width: 1024px;
+  margin: 0 auto;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.search-input {
+  font-size: 16px;
+  padding: 0.5em;
+  display: block;
+  width: 200px;
+  margin: 0.5em auto;
+}
+
+.movies-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
 
 .movie {
